--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-<h1> Oi :) </h1>
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>About me!</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    </head>
+    <body class="is-loading">
+        <!-- Wrapper -->
+        <div id="wrapper">
+            <!-- Main -->
+            <section id="main">
+                <header>
+                    <span class="avatar"><img src="images/me2.png" alt="" /></span>
+                    <h1>$ whoami</h1>
+                    <h2>matheus@fidelis:~</h2>
+                    <p>Power Ranger, Piloto de Helicópteros <br> e Astronauta da NASA.</p>
+                    <p>#Blogger, #Linux SysAdmin, <br> Web #PHP Developer e Entusiasta #Python.</p>
+                </header>
+                <footer>
+                    <ul class="icons">
+                        <li><a href="https://twitter.com/fidelissauro" class="fa-twitter">Twitter</a></li>
+                        <li><a href="http://nanoshots.com.br/" class="fa-link">Blogger</a></li>
+                        <li><a href="https://br.linkedin.com/in/msfidelis" class="fa-linkedin">LinkedIn</a></li>
+                        <li><a href="https://github.com/msfidelis" class="fa-github">Github</a></li>
+                    </ul>
+                    <ul class="actions">
+                        <li><a href="#" class="button">Portfólio</a></li>
+                    </ul>
+                    <hr>
+                    <h1>Other</h1>
+                </footer>
+            </section>
+            <!-- Footer -->
+            <footer id="footer">
+                <ul class="copyright">
+                    <li>&copy; Jane Doe</li>
+                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </footer>
+        </div>
+        <script>
+            if ('addEventListener' in window) {
+                window.addEventListener('load', function () {
+                    document.body.className = document.body.className.replace(/\bis-loading\b/, '');
+                });
+                document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+            }
+        </script>
+    </body>
+</html>
