--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <p>Power Ranger, Piloto de Helicópteros <br> e Astronauta da NASA.</p>
                     <p>#Blogger, #Linux SysAdmin, <br> Web #PHP Developer e Entusiasta #Python.</p>
                 </header>
+                <hr>
                 <footer>
                     <ul class="icons">
                         <li><a href="https://twitter.com/fidelissauro" class="fa-twitter">Twitter</a></li>
@@ -30,14 +31,24 @@
                         <li><a href="#" class="button">Portfólio</a></li>
                     </ul>
                     <hr>
-                    <h1>Other</h1>
                 </footer>
+
+                <pre  style="font-family:arial;font-size:12px;border:1px dashed #CCCCCC;width:99%;height:auto;overflow:auto;text-transform: none;padding:0px;color:#000000;text-align:left;line-height:20px;"><code style="color:#000000;word-wrap:normal;"> 
+    class contactController {  
+        private $protonmail1 = "matheus.fidelis@protonmail.com";  
+        private $protonmail2 = "d0ctor@protonmail.com";  
+   
+        public function index_action() {  
+            <a href="mailto:matheus.fidelis@protonmail.com">var_dump($this-&gt;protonmail1);</a>
+            <a href="mailto:d0ctor@protonmail.com">var_dump($this-&gt;protonmail2);</a>  
+        }  
+    }  
+</code></pre>
             </section>
             <!-- Footer -->
             <footer id="footer">
                 <ul class="copyright">
-                    <li>&copy; Jane Doe</li>
-                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                    <li>&copy; Matheus Fidelis</li>
                 </ul>
             </footer>
         </div>
