--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h1>$ whoami</h1>
                     <h2>matheus@fidelis:~</h2>
                     <p>Power Ranger, Piloto de Helicópteros <br> e Astronauta da NASA.</p>
-                    <p>#Blogger, #Linux SysAdmin, <br> Web #PHP Developer e Entusiasta #Python.</p>
+                    <p>#Blogger, #Linux #SysAdmin, <br> #Web #PHP #Developer e Entusiasta #Python.</p>
                 </header>
                 <hr>
                 <footer>
