--- a/index.html
+++ b/index.html
@@ -37,7 +37,21 @@
     class contactController {  
         private $protonmail1 = "matheus.fidelis@protonmail.com";  
         private $protonmail2 = "d0ctor@protonmail.com";
-        private $publicKey = "";
+        private $myBlog = "nanoshots.com.br";
+        private $myTools = array(
+                            <a href="https://github.com/msfidelis/Kill-Router-">"[+] Kill Router" => "Brute Force on Routers and Panels"</a>,
+                            <a href="https://github.com/msfidelis/Sherlock">"[+] Sherlock" => "Pesquisa de Disclosures em Frameworks Web"</a>,
+                            <a href="https://github.com/msfidelis/TheLittleWAF">"[+] TheLittleWAF" => "Firewall Pessoal para Servidores"</a>,
+                            <a href="https://github.com/msfidelis/VHostCreator">"[+] VHostCreator" => "Automatização de configuração de VirtualHosts"</a>,
+                            <a href="https://github.com/msfidelis/HDWipeTool">"[+] HDWipeTool" => "Wipe total em HD's e Dispositivos"</a>,
+                            <a href="https://github.com/msfidelis/PythonBackupSystem">"[+] PythonBackupSystem" => "Backup Full e Diferencial em Python"</a>
+                        );
+
+        private $projects = array(
+                            "#CienciaHacker",
+                            "#Nanoshots",
+                            "#GDGCabreuva"
+                        );
    
         public function index_action() {  
             <a href="mailto:matheus.fidelis@protonmail.com">var_dump($this-&gt;protonmail1);</a>
