--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <hr>
                 <footer>
                     <ul class="icons">
-                        <li><a href="https://twitter.com/fidelissauro" class="fa-twitter">Twitter</a></li>
-                        <li><a href="http://nanoshots.com.br/" class="fa-link">Blogger</a></li>
-                        <li><a href="https://br.linkedin.com/in/msfidelis" class="fa-linkedin">LinkedIn</a></li>
-                        <li><a href="https://github.com/msfidelis" class="fa-github">Github</a></li>
+                        <li><a href="https://twitter.com/fidelissauro" target="_blank" class="fa-twitter">Twitter</a></li>
+                        <li><a href="http://nanoshots.com.br/"  target="_blank" class="fa-link">Blogger</a></li>
+                        <li><a href="https://br.linkedin.com/in/msfidelis" target="_blank" class="fa-linkedin">LinkedIn</a></li>
+                        <li><a href="https://github.com/msfidelis" target="_blank" class="fa-github">Github</a></li>
                     </ul>
                     <ul class="actions">
                         <li><a href="#" class="button">Portfólio</a></li>
@@ -39,12 +39,12 @@
         private $protonmail2 = "d0ctor@protonmail.com";
         private $myBlog = "nanoshots.com.br";
         private $myTools = array(
-                            <a href="https://github.com/msfidelis/Kill-Router-">"[+] Kill Router" => "Brute Force on Routers and Panels"</a>,
-                            <a href="https://github.com/msfidelis/Sherlock">"[+] Sherlock" => "Pesquisa de Disclosures em Frameworks Web"</a>,
-                            <a href="https://github.com/msfidelis/TheLittleWAF">"[+] TheLittleWAF" => "Firewall Pessoal para Servidores"</a>,
-                            <a href="https://github.com/msfidelis/VHostCreator">"[+] VHostCreator" => "Automatização de configuração de VirtualHosts"</a>,
-                            <a href="https://github.com/msfidelis/HDWipeTool">"[+] HDWipeTool" => "Wipe total em HD's e Dispositivos"</a>,
-                            <a href="https://github.com/msfidelis/PythonBackupSystem">"[+] PythonBackupSystem" => "Backup Full e Diferencial em Python"</a>
+                            <a href="https://github.com/msfidelis/Kill-Router-" target="_blank">"[+] Kill Router" => "Brute Force on Routers and Panels"</a>,
+                            <a href="https://github.com/msfidelis/Sherlock" target="_blank">"[+] Sherlock" => "Pesquisa de Disclosures em Frameworks Web"</a>,
+                            <a href="https://github.com/msfidelis/TheLittleWAF" target="_blank">"[+] TheLittleWAF" => "Firewall Pessoal para Servidores"</a>,
+                            <a href="https://github.com/msfidelis/VHostCreator" target="_blank">"[+] VHostCreator" => "Automatização de configuração de VirtualHosts"</a>,
+                            <a href="https://github.com/msfidelis/HDWipeTool" target="_blank">"[+] HDWipeTool" => "Wipe total em HD's e Dispositivos"</a>,
+                            <a href="https://github.com/msfidelis/PythonBackupSystem" target="_blank">"[+] PythonBackupSystem" => "Backup Full e Diferencial em Python"</a>
                         );
 
         private $projects = array(
@@ -56,6 +56,7 @@
         public function index_action() {  
             <a href="mailto:matheus.fidelis@protonmail.com">var_dump($this-&gt;protonmail1);</a>
             <a href="mailto:d0ctor@protonmail.com">var_dump($this-&gt;protonmail2);</a>  
+            <a href="http://nanoshots.com.br/" target="_blank">var_dump($this-&gt;myBlog);</a> 
             var_dump($this->publicKey);
         }  
     }  
