--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </footer>
 
                 <pre  style="font-family:arial;font-size:12px;border:1px dashed #CCCCCC;width:99%;height:auto;overflow:auto;text-transform: none;padding:0px;color:#000000;text-align:left;line-height:20px;"><code style="color:#000000;word-wrap:normal;"> 
-    class contactController extends matheus {  
+    class contact extends matheus {  
         private $protonmail1 = "matheus.fidelis@protonmail.com";  
         private $protonmail2 = "d0ctor@protonmail.com";
         private $myBlog = "nanoshots.com.br";
