--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         private $myBlog = "nanoshots.com.br";
 
         private $techs = array(
-                            "#PHP5",
-                            "#Jquery",
-                            "#CakePHP",
-                            "#CodeIgniter",
-                            "#TwitterBootstrap",
-                            "#MaterialDesign",
-                            "#HTML5/CSS3/Javascript",
-                            "#Python2.7",
-                            "#Django",
+                            <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP5"</a>,
+                            <a href="https://jquery.com/" target="_blank">"#Jquery"</a>,
+                            <a href="http://cakephp.org/" target="_blank">"#CakePHP"</a>,
+                            <a href="https://www.codeigniter.com/" target="_blank">"#CodeIgniter"</a>,
+                            <a href="http://getbootstrap.com/" target="_blank">"#TwitterBootstrap"</a>,
+                            <a href="https://www.getmdl.io/" target="_blank">"#MaterialDesign"</a>,
+                            <a href="http://www.w3schools.com/" target="_blank">"#HTML5/CSS3/Javascript"</a>,
+                            <a href="https://www.python.org/" target="_blank">"#Python2.7"</a>,
+                            <a href="https://www.djangoproject.com/" target="_blank">"#DjangoProject"</a>,
                             "#Linux",
                             "#Security"
                         );        
@@ -64,12 +64,12 @@
                         );
 
         private $projects = array(
-                            "#CienciaHacker",
+                            <a href="https://cienciahacker.ch/" target="_blank">"#CienciaHacker"</a>,
                             "#Nanoshots",
                             "#GDGCabreuva",
-                            "#SlackwareLinux",
-                            "#DebianLinux",
-                            "#CentOS",
+                            <a href="http://www.slackware.com/" target="_blank">"#SlackwareLinux"</a>,
+                            <a href="https://www.debian.org/index.pt.html" target="_blank">"#DebianLinux"</a>,
+                            <a href="https://www.centos.org/" target="_blank">"#CentOS"</a>,
                         );
    
         public function showData() {  
