--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <header>
                     <span class="avatar"><img src="images/me2.png" alt="" /></span>
                     <h1>$ whoami</h1>
-                    <h2>matheus@fidelis:~</h2>
+                    <h2>matheus@fidelis:~$</h2>
                     <p>Power Ranger, Piloto de Helicópteros <br> e Astronauta da NASA.</p>
                     <p>#Blogger, #Linux #SysAdmin, <br> #Web #PHP #Developer e Entusiasta #Python.</p>
                 </header>
@@ -29,7 +29,7 @@
                         <li><a href="https://www.vivaolinux.com.br/~msfidelis" target="_blank" class="fa-linux">Viva o Linux</a></li>
                     </ul>
                     <ul class="actions">
-                        <li><a href="#" class="button">Portfólio</a></li>
+                        <li><a href="portfolio.html" class="button">Portfólio</a></li>
                     </ul>
                     <hr>
                 </footer>
