--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </header>
-    <!-- /.navbar-->   
+    <!-- /.navbar-->
     <!-- Portfolio / gallery-->
     <section id="portfolio" class="gallery">
       <div class="container clearfix">
@@ -40,16 +40,16 @@
           <div class="col-md-12">
             <div class="row">
               <div class="col-md-12 col-lg-8">
-                <h2 class="heading">Portfolio</h2>
-                <p>Mimimimimimi </p>
+                <h2 class="heading">Portfolio - Web</h2>
+                <p>Meu portfólio Web - msfidelis01@gmail.com </p>
               </div>
             </div>
             <div class="row">
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-1.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 1" data-footer="Some footer information"><img src="img/portfolio-1.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio-1.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Vestibular FATEC Itu" data-footer="Site de Cadastro de Interessados no Vestibular FATEC - #PHP5, #Bootstrap, #JQuery - <a target='_blank' href='http://design.google.com/resizer/#url=http%3A%2F%2Fvestibularfatec.pe.hu%2F' >ACESSE</a> " -  ><img src="img/portfolio-1.jpg" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-2.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 2" data-footer="Some footer information"><img src="img/portfolio-2.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio-2.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 2" data-footer="Site Patrão Legal - Acessoria Laboral Doméstica - #Boostrap -  <a target='_blank' href='http://design.google.com/resizer/#url=http%3A%2F%2Fvestibularfatec.pe.hu%2F' >ACESSE</a>"><img src="img/portfolio-2.jpg" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-4">
                 <div class="box"><a href="img/portfolio-3.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 3" data-footer="Some footer information"><img src="img/portfolio-3.jpg" alt="" class="img-responsive"></a></div>
