--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     </head>
     <body class="is-loading">
@@ -34,9 +35,9 @@
                     <hr>
                 </footer>
 
-                <pre  style="font-family:arial;font-size:12px;border:1px dashed #CCCCCC;width:99%;height:auto;overflow:auto;text-transform: none;padding:0px;color:#000000;text-align:left;line-height:20px;"><code style="color:#000000;word-wrap:normal;"> 
-    class contact extends matheus {  
-        private $protonmail1 = "matheus.fidelis@protonmail.com";  
+                <pre  style="font-family:arial;font-size:12px;border:1px dashed #CCCCCC;width:99%;height:auto;overflow:auto;text-transform: none;padding:0px;color:#000000;text-align:left;line-height:20px;"><code style="color:#000000;word-wrap:normal;">
+    class contact extends matheus {
+        private $protonmail1 = "matheus.fidelis@protonmail.com";
         private $protonmail2 = "d0ctor@protonmail.com";
         private $myBlog = "nanoshots.com.br";
 
@@ -52,7 +53,7 @@
                             <a href="https://www.djangoproject.com/" target="_blank">"#DjangoProject"</a>,
                             "#Linux",
                             "#Security"
-                        );        
+                        );
 
         private $myTools = array(
                             <a href="https://github.com/msfidelis/Kill-Router-" target="_blank">"[+] Kill Router" => "Brute Force on Routers and Panels"</a>,
@@ -71,14 +72,14 @@
                             <a href="https://www.debian.org/index.pt.html" target="_blank">"#DebianLinux"</a>,
                             <a href="https://www.centos.org/" target="_blank">"#CentOS"</a>,
                         );
-   
-        public function showData() {  
+
+        public function showData() {
             <a href="mailto:matheus.fidelis@protonmail.com">var_dump($this-&gt;protonmail1);</a>
-            <a href="mailto:d0ctor@protonmail.com">var_dump($this-&gt;protonmail2);</a>  
-            <a href="http://nanoshots.com.br/" target="_blank">var_dump($this-&gt;myBlog);</a> 
+            <a href="mailto:d0ctor@protonmail.com">var_dump($this-&gt;protonmail2);</a>
+            <a href="http://nanoshots.com.br/" target="_blank">var_dump($this-&gt;myBlog);</a>
             var_dump($this->publicKey);
-        }  
-    }  
+        }
+    }
 </code></pre>
             </section>
             <!-- Footer -->
