Update de Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,10 +50,10 @@
                 <div class="box"><a href="img/portfolio-1.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Vestibular FATEC Itu" data-footer="Site de Cadastro de Interessados no Vestibular FATEC - #PHP5, #Bootstrap, #JQuery - <a target='_blank' href='http://design.google.com/resizer/#url=http%3A%2F%2Fvestibularfatec.pe.hu%2F' >ACESSE</a> " -  ><img src="img/portfolio-1.jpg" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-2.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 2" data-footer="Site Patrão Legal - Acessoria Laboral Doméstica - #Bootstrap -  <a target='_blank' href='http://design.google.com/resizer/#url=http%3A%2F%2Fvestibularfatec.pe.hu%2F' >ACESSE</a>"><img src="img/portfolio-2.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio-2.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Patrão Legal - Acessoria Laboral Doméstica" data-footer="Site Patrão Legal - Acessoria Laboral Doméstica - #Bootstrap -  <a target='_blank' href='http://design.google.com/resizer/#url=http%3A%2F%2Fvestibularfatec.pe.hu%2F' >ACESSE</a>"><img src="img/portfolio-2.jpg" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-3.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 3" data-footer="Some footer information"><img src="img/portfolio-3.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio-3.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Antrosoft Tecnologia | ERP Empresarial" data-footer="Antrosoft Tecnologia | ERP Empresarial - #Bootstrap #Jquery #CakePHP - <a target='_blank' href='http://design.google.com/resizer/#url=http%3A%2F%2Fantrosofttecnologia.com.br%2F' >ACESSE</a>"><img src="img/portfolio-3.jpg" alt="" class="img-responsive"></a></div>
               </div>
             </div>
             <div class="row">
