--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                             <a href="https://www.python.org/" target="_blank">"#Python2.7"</a>,
                             <a href="https://www.djangoproject.com/" target="_blank">"#DjangoProject"</a>,
                             "#Linux",
-                            "#Security"
+                            "#Security",
+                            "#Server Hardening"
                         );
 
         private $myTools = array(
