Adicionando Itens no Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
-    <!-- Bootstrap and Font Awesome css-->
-    <!-- we use cdn but you can also include local files located in css directory-->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Google fonts - Montserrat for headings, Cardo for copy-->
     <link href="portfolio/css/style.default.css" rel="stylesheet" type="text/css"/>
@@ -58,44 +56,22 @@
             </div>
             <div class="row">
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-4.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio-4.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="São Camilo Itu | Santa Casa" data-footer="Hospital São Camilo de Itu - #Blogger #CSS3 #Jquery #CMS - <a target='_blank' href='http://design.google.com/resizer/#url=http%3A%2F%2Fwww.saocamiloitu.com%2F' >ACESSE</a>"><img src="img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div>
-              </div>
-              <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-6.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 6" data-footer="Some footer information"><img src="img/portfolio-6.jpg" alt="" class="img-responsive"></a></div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-7.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 7" data-footer="Some footer information"><img src="img/portfolio-7.jpg" alt="" class="img-responsive"></a></div>
-              </div>
-              <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-8.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 8" data-footer="Some footer information"><img src="img/portfolio-8.jpg" alt="" class="img-responsive"></a></div>
-              </div>
-              <div class="col-sm-4">
-                <div class="box"><a href="img/portfolio-9.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 9" data-footer="Some footer information"><img src="img/portfolio-9.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="DeaSoft - Intranet/ERP de Gestão de Salão de Beleza" data-footer="DeaSoft ERP - #CakePHP #Javascript #jQuery #Bootstrap #Datatables #Ajax #PostgreSQL #MaterialBootstrap"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- Portfolio / gallery end-->
-    <!-- Javascript files-->
-    <!-- jQuery-->
     <script src="portfolio/js/jquery-1.11.0.min.js" type="text/javascript"></script>
-    <!-- Bootstrap CDN-->
-    <!-- jQuery Cookie - For Demo Purpose-->
     <script src="portfolio/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="portfolio/js/jquery.cookie.js"></script>
-    <!-- Lightbox-->
     <script src="portfolio/js/ekko-lightbox.js"> </script>
-    <!-- Sticky + Scroll To scripts for navbar-->
     <script src="portfolio/js/jquery.sticky.js"></script>
     <script src="portfolio/js/jquery.scrollTo.min.js"></script>
-    <!-- main script-->
     <script src="portfolio/js/front.js"></script>
   </body>
 </html>
