--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <li><a href="https://br.linkedin.com/in/msfidelis" target="_blank" class="fa-linkedin">LinkedIn</a></li>
                         <li><a href="https://github.com/msfidelis" target="_blank" class="fa-github">Github</a></li>
                         <li><a href="https://www.vivaolinux.com.br/~msfidelis" target="_blank" class="fa-linux">Viva o Linux</a></li>
+                        <li><a href="http://pt.slideshare.net/MatheusFidelis1" target="_blank" class="fa-slideshare">Slideshare</a></li>
                     </ul>
                     <ul class="actions">
                         <li><a href="portfolio.html" class="button">Portfólio</a></li>
