atualização de portfólio

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 
         private $techs = array(
                             <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP5"</a>,
+                            <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP7"</a>,
                             <a href="https://jquery.com/" target="_blank">"#Jquery"</a>,
-                            <a href="http://cakephp.org/" target="_blank">"#CakePHP"</a>,
+                            <a href="http://cakephp.org/" target="_blank">"#CakePHP3"</a>,
                             <a href="https://www.codeigniter.com/" target="_blank">"#CodeIgniter"</a>,
                             <a href="http://getbootstrap.com/" target="_blank">"#TwitterBootstrap"</a>,
                             <a href="https://www.getmdl.io/" target="_blank">"#MaterialDesign"</a>,
@@ -68,6 +69,7 @@
 
         private $myTools = array(
                             <a href="https://github.com/msfidelis/Kill-Router-" target="_blank">"[+] Kill Router" => "Brute Force on Routers and Panels"</a>,
+                            <a href="https://github.com/msfidelis/CakePHPSmarty" target="_blank">"[+] CakePHPSmarty" => "CakePHP3 Core With Smarty"</a>,
                             <a href="https://github.com/msfidelis/Sherlock" target="_blank">"[+] Sherlock" => "Pesquisa de Disclosures em Frameworks Web"</a>,
                             <a href="https://github.com/msfidelis/TheLittleWAF" target="_blank">"[+] TheLittleWAF" => "Firewall Pessoal para Servidores"</a>,
                             <a href="https://github.com/msfidelis/VHostCreator" target="_blank">"[+] VHostCreator" => "Automatização de configuração de VirtualHosts"</a>,
