--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
                             <a href="http://www.w3schools.com/" target="_blank">"#HTML5/CSS3/Javascript"</a>,
                             <a href="https://www.python.org/" target="_blank">"#Python2.7"</a>,
                             <a href="https://www.djangoproject.com/" target="_blank">"#DjangoProject"</a>,
-                            "#Linux",
+                            "#Linux SysAdmin",
+			    "#DevOps", 
+			    "#Git",
+		      	    "#Jenkins", 
+			    "#AmazonAWS", 
+		            "#Docker",
+			    "#MySQL-MariaDB, 
+			    "#PostgreSQL", 
                             "#Security",
                             "#Server Hardening"
                         );
