--- a/index.html
+++ b/index.html
@@ -47,31 +47,33 @@
                 </footer>
 
                 <pre  style="font-family:arial;font-size:12px;border:1px dashed #CCCCCC;width:99%;height:auto;overflow:auto;text-transform: none;padding:0px;color:#000000;text-align:left;line-height:20px;"><code style="color:#000000;word-wrap:normal;">
-    class contact extends matheus {
+    class contact extends person {
+    
+        private $name = "Matheus Scarpato Fidelis";
         private $protonmail1 = "matheus.fidelis@protonmail.com";
         private $myBlog = "nanoshots.com.br";
 
         private $techs = array(
-                            <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP5"</a>,
-                            <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP7"</a>,
-                            <a href="https://jquery.com/" target="_blank">"#Jquery"</a>,
-                            <a href="http://cakephp.org/" target="_blank">"#CakePHP3"</a>,
-                            <a href="https://www.codeigniter.com/" target="_blank">"#CodeIgniter"</a>,
-                            <a href="http://getbootstrap.com/" target="_blank">"#TwitterBootstrap"</a>,
-                            <a href="https://www.getmdl.io/" target="_blank">"#MaterialDesign"</a>,
-                            <a href="http://www.w3schools.com/" target="_blank">"#HTML5/CSS3/Javascript"</a>,
-                            <a href="https://www.python.org/" target="_blank">"#Python2.7"</a>,
-                            <a href="https://www.djangoproject.com/" target="_blank">"#DjangoProject"</a>,
-                            "#Linux SysAdmin",
-			    "#DevOps", 
-			    "#Git",
-		      	    "#Jenkins", 
-			    "#AmazonAWS", 
-		            "#Docker",
-			    "#MySQL-MariaDB, 
-			    "#PostgreSQL", 
-                            "#Security",
-                            "#Server Hardening"
+                        <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP5"</a>,
+                        <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP7"</a>,
+                        <a href="https://jquery.com/" target="_blank">"#Jquery"</a>,
+                        <a href="http://cakephp.org/" target="_blank">"#CakePHP3"</a>,
+                        <a href="https://www.codeigniter.com/" target="_blank">"#CodeIgniter"</a>,
+                        <a href="http://getbootstrap.com/" target="_blank">"#TwitterBootstrap"</a>,
+                        <a href="https://www.getmdl.io/" target="_blank">"#MaterialDesign"</a>,
+                        <a href="http://www.w3schools.com/" target="_blank">"#HTML5/CSS3/Javascript"</a>,
+                        <a href="https://www.python.org/" target="_blank">"#Python2.7"</a>,
+                        <a href="https://www.djangoproject.com/" target="_blank">"#DjangoProject"</a>,
+                        "#Linux SysAdmin",
+                        "#DevOps", 
+                        "#Git",
+                        "#Jenkins", 
+                        "#AmazonAWS", 
+                        "#Docker",
+                        "#MySQL-MariaDB, 
+                        "#PostgreSQL", 
+                        "#Security",
+                        "#Server Hardening"
                         );
 
         private $myTools = array(
