--- a/talks/superlogica-kickoff-html/index.html
+++ b/talks/superlogica-kickoff-html/index.html
@@ -135,6 +135,16 @@
         </ul>
       </section>
 
+      <section>
+        <h2>Montando um Form "Simplão"</h2>
+        <h4>Componentes de um Form</h4>
+        <ul>
+          <li class="fragment"><code>&lt;input type="text" name="campo-texto" id="campo-texto"&gt;</code></li>
+          <li class="fragment"><code>&lt;input type="number" name="campo-numerico" id="campo-numerico"&gt;</code></li>
+          <li class="fragment"><code>&lt;input type="checkbox" name="campo-checkbox" id="campo-checkbox"&gt;</code></li>
+        </ul>
+      </section>
+
       <section data-background-image="img/great-frontend.png">
         <h2>O HTML não faz nada sozinho</h2>
       </section>
@@ -173,6 +183,29 @@
         </ul>
       </section>
 
+      <section data-background="#6f5499">
+        <h3>Bootstrap</h3>
+        <ul>
+          <li>Framework HTML/CSS focado em Responsividade</li>
+          <li>Um dos maiores projetos do Github</li>
+          <li>Criado durante um Hackathon e mantido por muito tempo pelo Twitter</li>
+          <li>Otimizado para Landing Pages e Single Page Applications</li>
+          <li><a target="_blank" href="https://blackrockdigital.github.io/startbootstrap-creative/">Exemplo Single Page</a></li>
+          <li><a target="_blank" href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/index.html">Exemplo Dashboard Responsiva</a></li>
+        </ul>
+      </section>
+
+      <section data-background-image="img/material.png">
+        <h3>Google Material Design</h3>
+        <ul>
+          <li>Framework HTML/CSS com os padrões visuais do Google</li>
+          <li>Adoção do Design Flat</li>
+          <li>Contexto de papel</li>
+          <li><a target="_blank" href="https://getmdl.io/templates/text-only/index.html">Material Page</a></li>
+          <li><a target="_blank" href="https://getmdl.io/templates/android-dot-com/index.html">Material Landing Page</a></li>
+        </ul>
+      </section>
+
 
       <section>
         <h2>Por onde continuar a estudar? (Na faixa)</h2>
@@ -181,6 +214,12 @@
           <li>Curso em Vídeo - http://www.cursoemvideo.com/course/curso-de-html5/</li>
         </ul>
       </section>
+
+      <section>
+        <h2>Valeuzão!!</h2>
+        <h3>Perguntas?</h3>
+      </section>
+
     </div>
   </div>
     <script src="../src/reveal/lib/js/head.min.js"></script>
