--- a/talks/superlogica-kickoff-mysql/index.html
+++ b/talks/superlogica-kickoff-mysql/index.html
@@ -60,128 +60,86 @@
       </section>
 
       <section>
-        <h2>DML</h2>
+        <h2>DML (Linguagem de Manipulação de Dados) </h2>
           <ul class="fragment">
             <li>Linguagem de Manipulação de Dados</li>
             <li>É o subconjunto mais utilizado da linguagem SQL</li>
             <li>Manipula instruções de inserção, atualização, exclusão e consulta de informações</li>
-            <li>DCL (Data Control Language)</li>
-            <li>DTL (Data Transaction Language</li>
+            <li>INSERT: utilizado para inserir registros em uma tabela</li>
           </ul>
       </section>
 
       <section>
-        <h2>A Estrutura Básica do HTML</h2>
+        <h2>DML (Linguagem de Manipulação de Dados) </h2>
+          <ul>
+            <li>INSERT: utilizado para inserir registros em uma tabela</li>
+            <li>UPDATE: : utilizado para alterar valores de uma ou mais linhas da tabela.</li>
+            <li>DELETE: utilizado para excluir um ou mais registros de uma tabela.</li>
+            <li>SELECT: é utilizado para efetuar consultas no banco de dados.</li>
+          </ul>
+      </section>
+
+      <section>
+        <h2>DDL (Linguagem de Definição de Dados) </h2>
           <ul class="fragment">
-            <li>O HTML funciona a partir de uma estrutura básica
-                <img src="img/estrutura1.png"</li>
-            </ul>
+            <li>Subconjunto da SQL utilizado para gerenciar a estrutura do banco de dados.</li>
+            <li>Com a DDL podemos criar, alterar e remover tabelas, visões, funções, etc</li>
+          </ul>
       </section>
 
       <section>
-        <h2>A Estrutura Básica do HTML</h2>
-        <h3>HEAD - Includes, Metadados, Parametrizações do DOM</h3>
-            <img src="img/estrutura2.png">
+        <h2>DDL (Linguagem de Definição de Dados) </h2>
+          <ul>
+            <li>CREATE: utilizado para criar objetos no banco de dados.
+            <br>Ex: CREATE TABLE produtos ( ID INT PRIMARY KEY, NOME VARCHAR(50);</li>
+            <li>ALTER: : utilizado para alterar a estrutura de um objeto.
+            <br>Ex: ALTER TABLE produtos ADD preco float(10,2);</li>
+            <li>DROP: utilizado para remover um objeto do banco de dados.
+            <br>Ex: DROP TABLE produtos</li>
+          </ul>
       </section>
 
       <section>
-        <h2>A Estrutura Básica do HTML</h2>
-          <h3>BODY - Conteúdo da Página</h3>
-          <img align="center" src="img/estrutura3.png">
+        <h2>DCL (Linguagem de Controle de Dados) </h2>
+          <ul class="fragment">
+            <li>É o subconjunto da SQL utilizado para controlar o acesso aos dados </li>
+            <li>Usa basicamente dois comandos que permitem ou bloqueiam o acesso de usuários a dados.</li>
+          </ul>
       </section>
 
       <section>
-        <h2>Caráter Semântico</h2>
-          <img align="center" src="img/estrutura.gif">
+        <h2>DCL (Linguagem de Controle de Dados) </h2>
+          <ul>
+            <li>GRANT: Autoriza um usuário a executar alguma operação..
+            <br>Ex: GRANT select ON produtos TO raj;</li>
+            <li>REVOKE: Restringe ou remove a permissão de um usuário executar alguma operação.
+            <br>Ex: REVOKE CREATE TABLE FROM raj;</li>
+          </ul>
       </section>
 
       <section>
-        <h2>As principais tags HTML</h2>
-        <ul>
-          <li><code>&lt;h3&gt;Heading, ele vai do 1 até o 6&lt;/h3&gt;</code></li>
-          <li><code>&lt;img src="uma-imagem.jpg"/&gt;</code></li>
-          <li><code>&lt;a http://www.umlink.com &gt; Titulo do Link &lt;/a&gt;</code></li>
-        </ul>
+        <h2>DTL (Linguagem de controle de transações) </h2>
+          <ul class="fragment">
+            <li>subconjunto da SQL que fornece mecanismos para controlar transações no banco de dados </li>
+            <li>BEGIN TRANSACTION : Inicia uma Transação</li>
+            <li>COMMIT : efetivar as alterações. Usado em caso de sucesso.</li>
+            <li>ROLLBACK : Cancelar as alterações. Usado em caso de erros.</li>
+          </ul>
       </section>
 
       <section>
-        <h2>Montando um Form "Simplão"</h2>
-        <h4>Componentes de um Form</h4>
-        <ul>
-          <li class="fragment"><code>&lt;input type="text" name="campo-texto" id="campo-texto"&gt;</code></li>
-          <li class="fragment"><code>&lt;input type="number" name="campo-numerico" id="campo-numerico"&gt;</code></li>
-          <li class="fragment"><code>&lt;input type="checkbox" name="campo-checkbox" id="campo-checkbox"&gt;</code></li>
-        </ul>
-      </section>
-
-      <section data-background-image="img/great-frontend.png">
-        <h2>O HTML não faz nada sozinho</h2>
+        <h3>É necessário aprender SQL pra me tornar um desenvolvedor de software?</h3 >
+        <img align="center" class="fragment" src="img/yes.gif">
       </section>
 
       <section>
-        <h2>O Time do Frontend Developer</h2>
-        <img align="center" src="img/htmlcssjs.png">
-      </section>
-
-      <section>
-        <h2>O Time do Frontend Developer</h2>
-        <ul>
-          <li>HTML5 - Estrutura da Página</li>
-          <li>CSS3  - Estilos e Customização da Página</li>
-          <li>JavaScript - Constrole Dinâmico e Manipulação de Dados na View</li>
-        </ul>
-      </section>
-
-      <section data-background-image="img/buttons.gif">
-      </section>
-
-      <section>
-        <h3>Mas eu preciso ser especialista em Frontend pra fazer sites bonitos?</h3>
-        <img align="center" class="fragment" src="img/no.gif">
-      </section>
-
-      <section data-background-image="img/welcome.gif">
-        <h3>BEM VINDOS A ERA DOS FRAMEWORKS</h3>
-      </section>
-
-      <section>
-        <h3>Principais Frameworks Frontend Open Source</h3>
-        <ul>
-          <li>Twitter Bootstrap - <a href="http://getbootstrap.com" target="__blank">getbootstrap.com</a></li>
-          <li>Google Material Design - <a href="http://getmdl.io" target="__blank">getmdl.io</a> </li>
-        </ul>
-      </section>
-
-      <section data-background="#6f5499">
-        <h3>Bootstrap</h3>
-        <ul>
-          <li>Framework HTML/CSS focado em Responsividade</li>
-          <li>Um dos maiores projetos do Github</li>
-          <li>Criado durante um Hackathon e mantido por muito tempo pelo Twitter</li>
-          <li>Otimizado para Landing Pages e Single Page Applications</li>
-          <li><a target="_blank" href="https://blackrockdigital.github.io/startbootstrap-creative/">Exemplo Single Page</a></li>
-          <li><a target="_blank" href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/index.html">Exemplo Dashboard Responsiva</a></li>
-        </ul>
-      </section>
-
-      <section data-background-image="img/material.png">
-        <h3>Google Material Design</h3>
-        <ul>
-          <li>Framework HTML/CSS com os padrões visuais do Google</li>
-          <li>Adoção do Design Flat</li>
-          <li>Contexto de papel</li>
-          <li><a target="_blank" href="https://getmdl.io/templates/text-only/index.html">Material Page</a></li>
-          <li><a target="_blank" href="https://getmdl.io/templates/android-dot-com/index.html">Material Landing Page</a></li>
-        </ul>
-      </section>
-
-
-      <section>
-        <h2>Por onde continuar a estudar? (Na faixa)</h2>
-        <ul class="fragment">
-          <li>W3School - http://www.w3schools.com/html/</li>
-          <li>Curso em Vídeo - http://www.cursoemvideo.com/course/curso-de-html5/</li>
-        </ul>
+        <h3>Por que SQL é tão importante?</h3 >
+          <ul class="fragment">
+            <li>O mundo interage com informaõçes. E elas precisam estar em algum lugar. </li>
+            <li>O SQL tem o poder de fazer QUALQUER COISA cem bancos de dados relacionais</li>
+            <li>MySQL Documentação: https://dev.mysql.com/doc/</li>
+            <li>SQL na W3School: http://www.w3schools.com/sql/default.asp</li>
+          </ul>
       </section>
 
       <section>
