--- a/talks/superlogica-kickoff-mysql/index.html
+++ b/talks/superlogica-kickoff-mysql/index.html
@@ -15,7 +15,7 @@
 				<h2>Superlogica</h2>
         <h2>Kick Off Dev</h2>
         <h3>Iniciante em programação Web</h3>
-				<h3>Introdução ao SQL com MySQL</h3>
+				<h3>Introdução ao SQL</h3>
       </section>
       <section>
         <h2>Sobre o autor</h2>
@@ -65,7 +65,6 @@
             <li>Linguagem de Manipulação de Dados</li>
             <li>É o subconjunto mais utilizado da linguagem SQL</li>
             <li>Manipula instruções de inserção, atualização, exclusão e consulta de informações</li>
-            <li>INSERT: utilizado para inserir registros em uma tabela</li>
           </ul>
       </section>
 
@@ -121,6 +120,16 @@
         <h2>DTL (Linguagem de controle de transações) </h2>
           <ul class="fragment">
             <li>subconjunto da SQL que fornece mecanismos para controlar transações no banco de dados </li>
+            <li>BEGIN TRANSACTION : Inicia uma Transação</li>
+            <li>COMMIT : efetivar as alterações. Usado em caso de sucesso.</li>
+            <li>ROLLBACK : Cancelar as alterações. Usado em caso de erros.</li>
+          </ul>
+      </section>
+
+      <section>
+        <h2>SQL Table Joins</h2>
+          <ul class="fragment">
+            <li>Joins são formas de relacionar duas ou mais tabelas entre si </li>
             <li>BEGIN TRANSACTION : Inicia uma Transação</li>
             <li>COMMIT : efetivar as alterações. Usado em caso de sucesso.</li>
             <li>ROLLBACK : Cancelar as alterações. Usado em caso de erros.</li>
