--- a/talks/superlogica-kickoff-mysql/index.html
+++ b/talks/superlogica-kickoff-mysql/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <title>Kickoff HTML - Superlogica</title>
     <link rel="stylesheet" href="../src/reveal/css/reveal.css">
-    <link rel="stylesheet" href="../src/reveal/css/theme/blood.css">
+    <link rel="stylesheet" href="../src/reveal/css/theme/moon.css">
 		<link rel="stylesheet" href="../src/fonts/css/font-awesome.min.css">
 
   </head>
   <body>
     <div class="reveal">
     <div class="slides">
-      <section data-background-image="img/background.jpg">
+      <section data-background-image="img/bg.jpg">
 				<h2>Superlogica</h2>
         <h2>Kick Off Dev</h2>
         <h3>Iniciante em programação Web</h3>
@@ -154,6 +154,8 @@
       <section>
         <h2>Valeuzão!!</h2>
         <h3>Perguntas?</h3>
+
+        <h4><a>Link dos Slides</a></h4>
       </section>
 
     </div>
