--- a/talks/superlogica-kickoff-html/index.html
+++ b/talks/superlogica-kickoff-html/index.html
@@ -218,6 +218,7 @@
       <section>
         <h2>Valeuzão!!</h2>
         <h3>Perguntas?</h3>
+        <h4><a target="__blank" href="http://msfidelis.github.io/talks/superlogica-kickoff-html/">Link dos Slides</a></h4>
       </section>
 
     </div>
