--- a/talks/superlogica-kickoff-mysql/index.html
+++ b/talks/superlogica-kickoff-mysql/index.html
@@ -130,9 +130,42 @@
         <h2>SQL Table Joins</h2>
           <ul class="fragment">
             <li>Joins são formas de relacionar duas ou mais tabelas entre si </li>
-            <li>BEGIN TRANSACTION : Inicia uma Transação</li>
-            <li>COMMIT : efetivar as alterações. Usado em caso de sucesso.</li>
-            <li>ROLLBACK : Cancelar as alterações. Usado em caso de erros.</li>
+            <img align="center" class="fragment" src="img/joins.jpg">
+          </ul>
+      </section>
+
+      <section>
+        <h2>INNER JOIN</h2>
+          <ul class="fragment">
+            <li>Retorna os registros em comum entre as duas tabelas </li>
+            <img align="center" class="fragment" src="img/inner.jpg">
+          </ul>
+      </section>
+
+      <section>
+        <h2>OUTER JOIN</h2>
+          <ul class="fragment">
+            <li>Conhecidos como Outer Full Join  </li>
+            <li>Retorna todos os registros presentes nas duas tabelas </li>
+            <img align="center" class="fragment" src="img/outer.jpg">
+          </ul>
+      </section>
+
+      <section>
+        <h2>LEFT JOIN</h2>
+          <ul class="fragment">
+            <li>Retorna todos os registros da tabela da ESQUERDA </li>
+            <li>e todos os registros da tabela da DIREITA </li>
+            <img align="center" class="fragment" src="img/left.png">
+          </ul>
+      </section>
+
+      <section>
+        <h2>RIGHT JOIN</h2>
+          <ul class="fragment">
+            <li>Retorna todos os registros da tabela da DIREITA </li>
+            <li>e todos os registros da tabela da ESQUERDA </li>
+            <img align="center" class="fragment" src="img/right.jpg">
           </ul>
       </section>
 
@@ -155,7 +188,7 @@
         <h2>Valeuzão!!</h2>
         <h3>Perguntas?</h3>
 
-        <h4><a>Link dos Slides</a></h4>
+        <h4><a href="http://msfidelis.github.io/talks/superlogica-kickoff-mysql/exemplos.sql">Exemplos da aula</a></h4>
       </section>
 
     </div>
