--- a/talks/superlogica-kickoff-mysql/index.html
+++ b/talks/superlogica-kickoff-mysql/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Kickoff HTML - Superlogica</title>
+    <title>Kickoff SQL - Superlogica</title>
     <link rel="stylesheet" href="../src/reveal/css/reveal.css">
     <link rel="stylesheet" href="../src/reveal/css/theme/moon.css">
 		<link rel="stylesheet" href="../src/fonts/css/font-awesome.min.css">
