--- a/talks/superlogica-kickoff-html/index.html
+++ b/talks/superlogica-kickoff-html/index.html
@@ -219,6 +219,7 @@
         <h2>Valeuzão!!</h2>
         <h3>Perguntas?</h3>
         <h4><a target="__blank" href="http://msfidelis.github.io/talks/superlogica-kickoff-html/">Link dos Slides</a></h4>
+        <h4><a target="__blank" href="http://msfidelis.github.io/talks/superlogica-kickoff-html/denis.html">Imprima seu certificado HTML</a></h4>
       </section>
 
     </div>
